# open-source-bike-computer

./: .gitignore  .gitmodules  LICENSE  README.md
RTL8720DN/BLEScan/: BLEScan.ino
WIO_Terminal/BikeComputer/: BikeComputer.ino  datatypes.h
XIAO_rRF52840_Sense/rpmSensor/: rpmSensor.ino
XIAO_rRF52840_Sense/speedSensor/: speedSensor.ino
rideviewer/: pyproject.toml  rideviewer.py
rideviewer/rideviewer/: datatypes.py  rideparse.py
