[tool.poetry]
name = "rideviewer"
version = "0.1.0"
description = "Software for viewing OS Bike Computer rides"
authors = ["Frederich Stine"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
matplotlib = "^3.7.1"
argparse = "^1.4.0"
folium = "^0.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
